# bianca

./: LICENSE  MANIFEST.in  README.md  analisador_sentimentos.py  analisador_transacoes.py  categorizador.py  exemplo_uso_parametros.py  main.py  pyproject.toml  requirements.txt  selecao_model.py  setup.py
bianca/: README.txt  __init__.py  __main__.py  calcular_tokens.py  converter_audio_texto.py  modelo.py  parametros.py
dados/: 9c-Artigo Esportivo-Possível Fraude.txt  9c-Artigo Esportivo-Possível Fraude1.txt  analise-Camisetas de algodão orgânico.txt  analise-Jeans feitos com materiais reciclados.txt  analise-Maquiagem mineral.txt
util/: __init__.py  util.py
